--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,6 +21,14 @@ body {
   }
 }
 
+.adjust-line-height {
+  line-height: 1em;
+}
+
+.adjust-margin {
+  margin: 0 0 0.5em;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
@@ -155,7 +163,7 @@ td > code {
 
 hr {
   display: block;
-  margin: 1em 0;
+  margin: 0em 0;
   border: 0;
   border-top: 1px solid $border-color;
 }
